--- a/Realizer2D.vcxproj.filters
+++ b/Realizer2D.vcxproj.filters
@@ -404,6 +404,9 @@
     <ClInclude Include="src\File.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\core\Errors.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\global.cpp">
