--- a/Realizer2D.vcxproj
+++ b/Realizer2D.vcxproj
@@ -276,7 +276,9 @@
     <ClInclude Include="src\CollisionObject.h" />
     <ClInclude Include="src\CollisionShape2D.h" />
     <ClInclude Include="src\components\Drawers.h" />
+    <ClInclude Include="src\components\Timer.h" />
     <ClInclude Include="src\core\Errors.h" />
+    <ClInclude Include="src\core\StretchMode.h" />
     <ClInclude Include="src\Engine.h" />
     <ClInclude Include="src\File.h" />
     <ClInclude Include="src\global.h" />
@@ -299,6 +301,7 @@
     <ClCompile Include="src\ApplicationConfig.h" />
     <ClCompile Include="src\CollisionShape2D.cpp" />
     <ClCompile Include="src\components\Drawers.cpp" />
+    <ClCompile Include="src\components\Timer.cpp" />
     <ClCompile Include="src\Engine.cpp" />
     <ClCompile Include="src\File.cpp" />
     <ClCompile Include="src\global.cpp">
